Update dependencies and module-info: add Jackson YAML support, upgrade Ocular to 2.1.4